Revert "Remove tycho.mode=maven"
This reverts commit aa14bcfcfb2912c961ff115daa718c121aeabd96.